feat: added mocked handlers
