# docs/swagger.yaml
@@ -1,4 +1,170 @@
 definitions:
+  handler.createUserRequest:
+    properties:
+      company_id:
+        example: 1
+        type: integer
+      department_name:
+        example: First Department
+        type: string
+      department_phone:
+        example: +7(987)1112233
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: Ivan
+        type: string
+      passport_name:
+        example: Russian passport
+        type: string
+      passport_number:
+        example: 1122 112233
+        type: string
+      phone:
+        example: +7(987)6667788
+        type: string
+      surname:
+        example: Ivanov
+        type: string
+    required:
+    - company_id
+    - department_name
+    - department_phone
+    - id
+    - name
+    - passport_name
+    - passport_number
+    - phone
+    - surname
+    type: object
+  handler.listUsersByCompanyIdElement:
+    properties:
+      company_id:
+        example: 1
+        type: integer
+      department_name:
+        example: First Department
+        type: string
+      department_phone:
+        example: +7(987)1112233
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: Ivan
+        type: string
+      passport_name:
+        example: Russian passport
+        type: string
+      passport_number:
+        example: 1122 112233
+        type: string
+      phone:
+        example: +7(987)6667788
+        type: string
+      surname:
+        example: Ivanov
+        type: string
+    required:
+    - company_id
+    - department_name
+    - department_phone
+    - id
+    - name
+    - passport_name
+    - passport_number
+    - phone
+    - surname
+    type: object
+  handler.listUsersByDepartmentElement:
+    properties:
+      company_id:
+        example: 1
+        type: integer
+      department_name:
+        example: First Department
+        type: string
+      department_phone:
+        example: +7(987)1112233
+        type: string
+      id:
+        example: 1
+        type: integer
+      name:
+        example: Ivan
+        type: string
+      passport_name:
+        example: Russian passport
+        type: string
+      passport_number:
+        example: 1122 112233
+        type: string
+      phone:
+        example: +7(987)6667788
+        type: string
+      surname:
+        example: Ivanov
+        type: string
+    required:
+    - company_id
+    - department_name
+    - department_phone
+    - id
+    - name
+    - passport_name
+    - passport_number
+    - phone
+    - surname
+    type: object
+  thttp.ResponseError:
+    properties:
+      description:
+        type: string
+      error_code:
+        type: integer
+      ok:
+        type: boolean
+      result: {}
+    type: object
+  thttp.ResponseOk:
+    properties:
+      description:
+        type: string
+      error_code:
+        type: integer
+      ok:
+        type: boolean
+      result: {}
+    type: object
+  thttp.ResponseWithDetails-handler_listUsersByCompanyIdResponse:
+    properties:
+      description:
+        type: string
+      error_code:
+        type: integer
+      ok:
+        type: boolean
+      result:
+        items:
+          $ref: '#/definitions/handler.listUsersByCompanyIdElement'
+        type: array
+    type: object
+  thttp.ResponseWithDetails-handler_listUsersByDepartmentResponse:
+    properties:
+      description:
+        type: string
+      error_code:
+        type: integer
+      ok:
+        type: boolean
+      result:
+        items:
+          $ref: '#/definitions/handler.listUsersByDepartmentElement'
+        type: array
+    type: object
   thttp.ResponseWithDetails-string:
     properties:
       description:
@@ -30,4 +196,115 @@ paths:
       summary: Пинг сервиса
       tags:
       - Служебные
+  /api/users/create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Данные пользователя
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handler.createUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      security:
+      - ApiKeyAuth: []
+      summary: Созданеие пользователя
+      tags:
+      - Users
+  /api/users/delete/{userId}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: Идентификатор пользователя
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/thttp.ResponseOk'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/thttp.ResponseError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/thttp.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Удаление пользователя
+      tags:
+      - Users
+  /api/users/list/{companyId}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Идентификатор компании
+        in: path
+        name: companyId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/thttp.ResponseWithDetails-handler_listUsersByCompanyIdResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/thttp.ResponseError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/thttp.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Получение пользователей по id компании
+      tags:
+      - Users
+  /api/users/list/department/{depName}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Название отдела
+        in: path
+        name: depName
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/thttp.ResponseWithDetails-handler_listUsersByDepartmentResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/thttp.ResponseError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/thttp.ResponseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Получение пользователей по отделу
+      tags:
+      - Users
 swagger: "2.0"
